# quantauto

./: LICENSE  README.md  loc_count.py  pyproject.toml  setup.py
examples/: classification.ipynb  ranking.ipynb  regression.ipynb
quantauto/: __init__.py
quantauto/backtesting/: __init__.py  cross_section.py  engine.py  execution.py  numba_utils.py  performance.py  portfolio.py  visualizations.py
quantauto/data/: __init__.py  align.py  loaders.py  schema.py  validator.py
quantauto/experiments/: __init__.py
quantauto/features/: __init__.py  engineering.py  presets.py  timing.py  transforms.py
quantauto/labels/: __init__.py  builders.py  timing.py  workflows.py
quantauto/models/: __init__.py  advanced_models.py  base.py  config.py  dataset.py  panel_dataset.py  panel_trainer.py  ranking_adapters.py  registry.py  sklearn_models.py  splits.py  splits_panel.py  trainer.py  types.py
quantauto/validation/: __init__.py  metrics.py  walk_forward.py
quantauto/workflows/: __init__.py  combined.py  config.py  helpers.py  pipeline.py
