[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantauto"
version = "0.1.0"
description = "A Python library for ML-driven trading signal research and backtesting"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "QuantAuto Contributors"}
]
keywords = ["quantitative", "trading", "machine-learning", "backtesting", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "numba>=0.56.0",
    "pydantic>=1.10.0",
    "matplotlib>=3.6.0",
    "scikit-learn>=1.2.0",
]

[project.optional-dependencies]
ml = [
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "catboost>=1.1.0",
    "fastai>=2.7.0",
]
ml-experimental = [
    "torch>=1.13.0",
    "tensorflow>=2.11.0",
]
ml-timeseries = [
    "statsmodels>=0.13.0",
    "prophet>=1.1.0",
    "pmdarima>=2.0.0",
]
ml-rl = [
    "stable-baselines3>=2.0.0",
    "gym>=0.26.0",
    "ray[rllib]>=2.0.0",
]
validation = [
    "optuna>=3.0.0",
]
viz = [
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]
docs = [
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=1.2.0",
]
all = [
    "quantauto[ml,ml-experimental,ml-timeseries,ml-rl,validation,viz,dev,test,docs]",
]

[project.urls]
Homepage = "https://github.com/ak7660/quantauto"
Repository = "https://github.com/ak7660/quantauto"
Issues = "https://github.com/ak7660/quantauto/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantauto*"]

[tool.setuptools.package-data]
quantauto = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
